--- a/css & html/1.css
+++ b/css & html/1.css
@@ -1,25 +1,27 @@
 /*pengaturan body*/
 
-#body{
-	background-color: yellow;
+/* #body{ */ 
+    body { /* we change the wrong code */
+	background-color:bisque;
 	text-align: center;
-	font-family: Verdana, Tahoma, Helvetica;
-	font-size: 12px;
+    font-family: Verdana, Tahoma, Helvetical;
+    font-size: 12px
 }
 
 /*pengaturan layout utama*/
 #layout{
-	background: #fff;
+	/*background: #fff;*/ background-color: bisque; /*we change the color*/
 	width: 980px;
 	margin: auto;
 	text-align: left;
 	padding: 2px;
+    border: 5px solid #990000; /*we add boder*/
 }
 
 #header{
 	width: 100%;
 	height: 130px;
-	background-color: black;
+	/*background-color: black;*/ background-color: brown; /*we change the color*/
 	position: relative;
 }
 
@@ -58,11 +60,16 @@
 	border-right: 1px solid black;
 	text-shadow: 0 -1px 1px rgba(0,0,0,0,6);
 }
-#menu ul li a: Hover{
-	color: white
+/*
+#menu ul li a:hover{
+	color: white;
 	background:solid black;	
+} 
+we change it becuase it have the wrong code */
+#menu ul li:hover a{
+	color: #3479CF;
+	background: #fff;	
 }
-
 /*pengaturan runningtext*/
 
 #runningtext{
@@ -70,7 +77,7 @@
 	height: 25px;
 	padding-top: 7px;
 	margin: 5px 0 5px 0;
-	background-color: black;
+	/*background-color: black;*/ background-color: maroon; /* we change the color */
 	color: white;
 	position: relative;
 }
