--- a/css & html/1.css
+++ b/css & html/1.css
@@ -1,7 +1,7 @@
 /*pengaturan body*/
 
 /* #body{ */ 
-    body { /* we change the wrong code */
+    body { /* i change the wrong code */
 	background-color:bisque;
 	text-align: center;
     font-family: Verdana, Tahoma, Helvetical;
@@ -10,7 +10,7 @@
 
 /*pengaturan layout utama*/
 #layout{
-	/*background: #fff;*/ background-color: bisque; /*we change the color*/
+	/*background: #fff;*/ background-color: bisque; /*i change the color*/
 	width: 980px;
 	margin: auto;
 	text-align: left;
@@ -21,7 +21,7 @@
 #header{
 	width: 100%;
 	height: 130px;
-	/*background-color: black;*/ background-color: brown; /*we change the color*/
+	/*background-color: black;*/ background-color: brown; /*i change the color*/
 	position: relative;
 }
 
@@ -65,7 +65,7 @@
 	color: white;
 	background:solid black;	
 } 
-we change it becuase it have the wrong code */
+i change it becuase it have the wrong code */
 #menu ul li:hover a{
 	color: #3479CF;
 	background: #fff;	
@@ -77,11 +77,12 @@ we change it becuase it have the wrong code */
 	height: 25px;
 	padding-top: 7px;
 	margin: 5px 0 5px 0;
-	/*background-color: black;*/ background-color: maroon; /* we change the color */
+	/*background-color: black;*/ background-color: maroon; /* i change the color */
 	color: white;
 	position: relative;
 }
 
+/*setting for the footer */
 #footer{
 	width: 100%;
 	height: 50px;
