--- a/css & html/3.css
+++ b/css & html/3.css
@@ -6,7 +6,7 @@
   }
 
 body {
-	background-color:white
+	background-color:white;
 	font-family:"Times New Roman", Times, Serif;
 	font-size: 12px;
 	line-height: 20px;
