--- a/css & html/4.css
+++ b/css & html/4.css
@@ -6,7 +6,7 @@
   }
 
 body {
-	background-color:white
+	background-color: skyblue;
 	font-family:"Times New Roman", Times, Serif;
 	font-size: 12px;
 	line-height: 20px;
@@ -26,14 +26,14 @@ a:hover {
 #wrap {
 	margin: 20px auto 10px auto;
 	width: 800px;
-	background: #fff;
+	background-color: lightcyan;
 	padding: 10px;
 	border: 5px solid #000;
 }
 
 #header {
 	height: 160px;
-background: #554d42 url(images/header.jpg) no-repeat;
+background: #554d42 url(aladin.jpg);
 }
 #header h1 { 
 font-size: 50px;
