--- a/css & html/1.css
+++ b/css & html/1.css
@@ -23,7 +23,7 @@
 	width: 100%;
 	height: 130px;
 	/*background-color: black;*/ background-color: brown; /*i changed the color*/
-    background-image: url(aladdin.jpg);
+    background-image: url(yulli1.jpg);
 	position: relative;
 }
 
