--- a/css & html/1.css
+++ b/css & html/1.css
@@ -2,42 +2,41 @@
 
 /* #body{ */ 
     body { /* i changed the wrong code */
-	background-color: cadetblue;
-	text-align: center;
+	background-color: skyblue; /*i changed the color*/
+	background-image: url(sky.jpg);
+    text-align: center;
     font-family: Verdana, Tahoma, Helvetical;
-    font-size: 12px
+    font-size: 12px;
 }
 
 /*setting for main layout*/
 #layout{
 	/*background: #fff;*/ background-color: aliceblue; /*i changed the color*/
-	width: 980px;
+	width: 850px; /* i canged the size */
 	margin: auto;
 	text-align: left;
 	padding: 2px;
-    border: 5px solid skyblue; /*i add border*/
+    border: 5px solid deepskyblue; /*i add border*/
+    
 }
 
 /*setting for the header*/
 #header{
 	width: 100%;
-	height: 130px;
+	height: 160px; /* i canged the size */
 	/*background-color: black;*/ background-color: brown; /*i changed the color*/
-    background-image: url(yulli1.jpg);
-	position: relative;
+    background-image: url(aladdin.jpg); /* i add image to the header */
+	opacity: 0.7; /* i add effect to the images*/
+    position: relative;
 }
 
-#header{
-	width: 100%;
-	height: 130px;
-}
 
 /*setting for menu */
 
 #menu{
 	width: 100%;
 	height: 40px;
-	background-color: lightskyblue;
+	background-color: lightskyblue; /*i changed the color*/
 	position: relative;
 }
 
@@ -56,9 +55,9 @@
 	color: white;
 	padding: 12px 20px;
 	text-decoration: none;
-	background: lightskyblue;
-	border-left: 1px solid white;
-	border-right: 1px solid white;
+	background: lightskyblue; /*i changed the color*/
+	border-left: 1px solid white; /*i changed the color*/
+	border-right: 1px solid white; /*i changed the color*/
 	text-shadow: 0 -1px 1px rgba(0,0,0,0,6);
 }
 /*
@@ -78,9 +77,51 @@ i changed it becuase it have the wrong code */
 	height: 25px;
 	padding-top: 7px;
 	margin: 5px 0 5px 0;
-	/*background-color: black;*/ background-color: cadetblue;/* we change the color */
+	/*background-color: black;*/ background-color: skyblue;/* i change the color */
 	color: white;
 	position: relative;
+}
+/* setting for content */
+#content {
+
+padding: 0 20px 20px 0;
+
+}
+/* i add some "right" (new code) to adjust the content */
+.right {
+
+float: right;
+
+width: 600px;
+
+text-align: justify;
+
+padding-top: 5px;
+
+}
+
+/* i add some "left" (new code) to adjust the content */
+
+.left {
+
+float: left;
+
+width: 225px;
+
+padding-top: 5px;
+    
+background-color: lightskyblue;
+
+}
+
+.left ul {
+
+padding: 10px 0 15px 30px;
+
+list-style-type:circle;
+
+color: blue;
+
 }
 
 /*setting for the footer*/
@@ -89,7 +130,7 @@ i changed it becuase it have the wrong code */
 	height: 50px;
 	margin-top: 5px;
 	padding-top: 30;
-	background-color: lightskyblue;
+	background-color: skyblue; /* ichanged the color*/
 	color: white;
 	font-size: 16pt;
 	text-align: center;
