--- a/css & html/1.css
+++ b/css & html/1.css
@@ -25,7 +25,7 @@
 	width: 100%;
 	height: 160px; /* i canged the size */
 	/*background-color: black;*/ background-color: brown; /*i changed the color*/
-    background-image: url(aladdin.jpg); /* i add image to the header */
+    background-image: url(yulli1.jpg); /* i add image to the header */
 	opacity: 0.7; /* i add effect to the images*/
     position: relative;
 }
