--- a/css & html/5.css
+++ b/css & html/5.css
@@ -1,13 +1,14 @@
-<!DOCTYPE>
-<html>
-    * {
+/* <!DOCTYPE>
+<html> 
+* {
 	margin: 0;
 	padding: 0;
-  }
+  } */
 
 body {
 	background-color: grey;
-	font-family:"Times New Roman", Times, Serif;
+    background-image: url(marble.jpg); /* we add background image */
+	font-family:"Times New Roman", /* Times*/, Serif;
 	font-size: 12px;
 	line-height: 20px;
 	color: #222;
@@ -24,8 +25,10 @@ a:hover {
        }
 
 #wrap {
-	margin: 20px auto 10px auto;
-	width: 800px;
+	/*margin: 20px auto 10px auto; we changed this*/
+    margin: auto;
+	width: 850px; /*we changed this from 800px to 850px*/
+    text-align: left; /*we add text align*/
 	background: #fff;
 	padding: 10px;
 	border: 5px solid #000;
@@ -33,13 +36,13 @@ a:hover {
 
 #header {
 	height: 160px;
-background: #554d42 url(images/header.jpg) no-repeat;
+background: #554d42 url(yulli2.jpg) no-repeat;
 }
 #header h1 { 
 font-size: 50px;
-letter-spacing: -7px;
+letter-spacing: -4px;
 padding: 17px 0 0 10px;
-color: #FF5500;
+color: grey;
 }
 #header h1 a { 
 color: #D1DDEF;
@@ -79,30 +82,32 @@ text-decoration: none;
 #content {
 padding: 0 20px 20px 0;
 }
-
-.right {
-float: right;
+/*we changed this from "right" to "left" */
+.left {
+float: left;
 width: 600px;
 text-align: justify;
 padding-top: 5px;
 }
-.right h2 {
+.left h2 {
 font-size: 18px;
 font-weight: 100;
 padding: 15px 0 7px 0;
 }
-.right h2 a {
+/* .right h2 a {
 text-decoration: none;
 }
 .right h2 a:hover {
 
-}
+} */
 
-.left {
+/*we changed this from "left" to "right" */
+.right {
 float: left;
-width: 160px;
-padding-top: 10px;
+width: 225px;
+padding-top: 25px;
 }
+/*
 .left h2 {
 margin: 10px 0 0 0;
 padding-left: 10px;
@@ -122,8 +127,6 @@ font-weight: 600;
 }
 .left ul li a:hover {
 
-}
-
 #footer {
 text-align: center;
 font-size: 11px;
@@ -132,3 +135,18 @@ color: #aaa;
 #footer a { color: #aaa; }
 #footer a:hover { color: #111; }
 </html>
+*/
+
+#footer {
+    width: 100%;
+	height: 50px;
+	margin-top: 5px;
+	padding-top: 10px;
+	background-color: black; /* i changed the color*/
+	opacity: 0.7; /*i add effect to the background*/
+    color: white;
+	font-size: 16pt;
+	text-align: center;
+	position: relative;
+	clear: both;
+}
