--- a/css & html/3.css
+++ b/css & html/3.css
@@ -6,7 +6,8 @@
   }
 
 body {
-	background-image: url("thumb-1920-176165.jpg"); /*i change the background*/
+	background-color: darkorange;
+    background-image: url("thumb-1920-176165.jpg"); /*i change the background*/
 	font-family: arial, serif;
 	font-size: 12px;
 	line-height: 20px;
@@ -20,20 +21,21 @@ a {
 
 a:hover {
 	text-decoration: underline;
-	color: #FFA500; /* change */
+	color: orangered; /* change */
        }
 
 #wrap {
-	margin: 20px auto 10px auto;
+	margin: auto;
 	width: 800px;
-	background: #FF7F50 ;/* I CHANGE THE COLOR */
+	background: rgba(5, 20, 50, 0.7) ;/* I CHANGE Background */
 	padding: 10px;
-	/* I deleted border */
+	 /* I deleted border */
 }
 
 #header {
+    width: 100%;
 	height: 160px;
-background: lightblue url(images/header.jpg) no-repeat;
+background: lightblue url("62ae4385-b5f2-4776-b9ab-bb73a02b6dde.__CR0,0,970,300_PT0_SX970_V1___.jpg");
 }
 #header h1 { 
 font-size: 50px;
@@ -48,13 +50,13 @@ font-weight: 600;
 letter-spacing: -7px;
 }
 #header h1 a:hover {
-color: #fff;
+color: deeppink;
 }
 
 #menu {
 height: 30px;
 line-height: 30px;
-background: #000;
+background: hotpink;
 }
 #menu ul {
 list-style-type: none;
@@ -129,6 +131,17 @@ text-align: center;
 font-size: 11px;
 color: #aaa;
 }
-#footer a { color: #aaa; }
-#footer a:hover { color: #111; }
+#footer{
+	width: 100%;
+	height: 50px;
+	margin-top: 5px;
+	padding-top: 10px;
+	background-color: deeppink; /* i change the color*/
+	opacity: 0.7; 
+    color: lightpink;
+	font-size: 16pt;
+	text-align: center;
+	position: relative;
+	clear: both;
+}
 </html>
