--- a/css & html/2.css
+++ b/css & html/2.css
@@ -1,52 +1,52 @@
-<!DOCTYPE>
-<html>
-    * {
+* {
 	margin: 0;
 	padding: 0;
   }
 
 body {
-	/*background color: white*/ background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg"); /*i change the background*/
-	font-family: fantasy;
+	/*background color: white, i changed the background*/ 
+    background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg"); /*i change the background*/
+	font-family: Tahoma, Helvetical;
 	font-size: 12px;
 	line-height: 20px;
-	color: #222;
      }
-
-a {
- 	text-decoration: none;
-	color: #99AECD;
-  }
+#runningtext{
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 10px;
+    color: cornflowerblue;
+    font-size: 25pt;
+    text-align: center;
+    position: relative;
+    clear: both;
+}
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: line-through;
 	color: #4F5D7F;
        }
 
 #wrap {
 	margin: 20px auto 10px auto;
 	width: 800px;
-	background: #99CCCC;
 	padding: 10px;
 }
 
 #header {
+    width: 100%
 	height: 160px;
-background: #008B8B url(images/header.jpg) no-repeat;
+    background-color: coral
 }
+
 #header h1 { 
-    font-family: sans-serif;
+font-family: sans-serif;
 font-size: 50px;
 letter-spacing: 10px;
 padding: 20px 0 0 10px;
 color: #FF5500;
 }
-#header h1 a { 
-color: #FF6633;
-text-decoration: none;
-font-weight: 600;
-letter-spacing: 17px;
-}
+
 #header h1 a:hover {
 color: #fff;
 }
@@ -68,12 +68,8 @@ float: left;
 padding: 0 20px 0 0;
 text-decoration: none;
 font-weight: 600;
-font-size: 12px;
+font-size: 16px;
 color: #fff;
-}
-#menu ul li a:hover {
-color: #aaa;
-text-decoration: none;
 }
 
 #content {
@@ -90,12 +86,6 @@ padding-top: 5px;
 font-size: 18px;
 font-weight: 100;
 padding: 15px 0 7px 0;
-}
-.right h2 a {
-text-decoration: none;
-}
-.right h2 a:hover {
-
 }
 
 .left {
