--- a/css & html/2.css
+++ b/css & html/2.css
@@ -22,6 +22,44 @@ body {
     clear: both;
 }
 
+
+/*LAYOUT SECTION*/
+#header{
+	width:100%;
+	background:#252525;
+}
+#content{
+	position:fixed;
+	background:#eee;
+    z-index:9999;
+	margin:0px 20px;
+}
+
+#footer{
+	position:relative;
+	background:#000;
+	height:40px;
+	line-height:40px;
+	color:#fff;
+	text-align:center;
+}
+
+/*CONTENT SECTION*/
+a.title{
+	color:#f0f0f0; 
+	font-weight:bold; 
+	text-decoration:none; 
+	font-size:30px; 
+	line-height:60px; 
+	padding-top:60px;
+}
+p{
+	padding:.5em 1em;
+	font-size:20px;
+	text-align:justify;
+}
+
+
 a:hover {
 	text-decoration: line-through;
 	color: #4F5D7F;
