--- a/css & html/3.css
+++ b/css & html/3.css
@@ -1,14 +1,14 @@
-<!DOCTYPE>
+/* <!DOCTYPE>
 <html>
     * {
 	margin: 0;
 	padding: 0;
-  }
+  } */
 
 body {
-	background-color: darkorange;
-    background-image: url("thumb-1920-176165.jpg"); /*i change the background*/
-	font-family: arial, serif;
+	background-color: darkorange; /* i changed the color */
+    background-image: url("thumb-1920-176165.jpg"); /*i changed the background*/
+	font-family: arial, serif; /* i changed the font */
 	font-size: 12px;
 	line-height: 20px;
 	color: #222;
@@ -16,27 +16,34 @@ body {
 
 a {
  	text-decoration: none;
-	color: orange; /* I CHANGE THE COLOR */
+	color: orange; /* I CHANGED THE COLOR */
   }
 
 a:hover {
 	text-decoration: underline;
-	color: orangered; /* change */
+	color: orangered; /* i changed the color */
        }
 
 #wrap {
-	margin: auto;
+    /* margin: 20px auto 10px auto */
+	margin: auto; /* i changed the margin */
 	width: 800px;
-	background: rgba(5, 20, 50, 0.7) ;/* I CHANGE Background */
+	background: rgba(5, 20, 50, 0.7) ;/* I CHANGED the Background */
 	padding: 10px;
-	 /* I deleted border */
+	 /* border: 5px solid #000; I deleted border */
 }
+/* 
+#header {
+	height: 160px;
+background: #554d42 url("images/header.jpg")no-repeat;
+} */
 
 #header {
     width: 100%;
 	height: 160px;
 background: lightblue url("62ae4385-b5f2-4776-b9ab-bb73a02b6dde.__CR0,0,970,300_PT0_SX970_V1___.jpg");
 }
+/*
 #header h1 { 
 font-size: 50px;
 letter-spacing: -7px;
@@ -51,12 +58,12 @@ letter-spacing: -7px;
 }
 #header h1 a:hover {
 color: deeppink;
-}
+} */
 
 #menu {
 height: 30px;
 line-height: 30px;
-background: hotpink;
+background: hotpink; /* i changed the color */
 }
 #menu ul {
 list-style-type: none;
@@ -81,6 +88,7 @@ text-decoration: none;
 #content {
 padding: 0 20px 20px 0;
 }
+/*
 
 .right {
 float: right;
@@ -97,14 +105,14 @@ padding: 15px 0 7px 0;
 text-decoration: none;
 }
 .right h2 a:hover {
-
-}
+} */
 
 .left {
 float: left;
-width: 160px;
+width: 800px; /* i changed the size */
 padding-top: 10px;
 }
+/*
 .left h2 {
 margin: 10px 0 0 0;
 padding-left: 10px;
@@ -131,12 +139,15 @@ text-align: center;
 font-size: 11px;
 color: #aaa;
 }
+#footer a {color: #aaa; }
+#footer a:hover {color: #111; }
+*/
 #footer{
 	width: 100%;
 	height: 50px;
 	margin-top: 5px;
 	padding-top: 10px;
-	background-color: deeppink; /* i change the color*/
+	background-color: deeppink; /* i changed the color*/
 	opacity: 0.7; 
     color: lightpink;
 	font-size: 16pt;
@@ -144,4 +155,4 @@ color: #aaa;
 	position: relative;
 	clear: both;
 }
-</html>
+/* </html> */
