--- a/css & html/3.css
+++ b/css & html/3.css
@@ -40,8 +40,8 @@ background: #554d42 url("images/header.jpg")no-repeat;
 
 #header {
     width: 100%;
-	height: 160px;
-background: lightblue url("62ae4385-b5f2-4776-b9ab-bb73a02b6dde.__CR0,0,970,300_PT0_SX970_V1___.jpg");
+	height: 3000px;
+background: lightblue url("eu_aladdin-movie_hero-v2_r_29ab6c1a.jpg");
 }
 /*
 #header h1 { 
