--- a/css & html/2.css
+++ b/css & html/2.css
@@ -1,15 +1,14 @@
-* {
-	margin: 0;
-	padding: 0;
-  }
+/*setting for body*/
+/* #body */
 
 body {
 	/*background color: white, i changed the background*/ 
-    background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg"); /*i change the background*/
+    background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg"); 
 	font-family: Tahoma, Helvetical;
 	font-size: 12px;
 	line-height: 20px;
      }
+
 #runningtext{
     width: 100%;
     height: 40px;
@@ -23,47 +22,90 @@ body {
 }
 
 
-/*LAYOUT SECTION*/
+/*setting for main layout*/
+#layout{
+    /*background: #fff; */ background: rgba(5,20,50.0,7);
+    width: 850px
+    margin: auto;
+    text-align: left;
+    padding: 2px;
+}
+
+
+/*setting for header*/
 #header{
 	width:100%;
-	background:#252525;
-}
-#content{
-	position:fixed;
-	background:#eee;
-    z-index:9999;
-	margin:0px 20px;
+    height: 70px;
+	background-color: coral;
+    opacity: 0.9;
+    position: relative;
 }
 
-#footer{
-	position:relative;
-	background:#000;
-	height:40px;
-	line-height:40px;
-	color:#fff;
-	text-align:center;
+
+/*setting for menu*/
+#menu{
+    width: 100%;
+    height: 40px;
+    background-color: darkkhaki;
+    opacity: 0.9;
+    position: relative;
 }
+
+#menu ul{
+    margin: 0;
+    padding: 0;
+    list-style: armenian;
+}
+
+#menu ul li{
+    float: left;
+}
+
+#menu li a{
+    float: left;
+    color: white;
+    padding: 12px 20px;
+    text-decoration: underline;   
+}
+
+
+#menu ul li:hover a{
+    color: beige;
+    background-color: cadetblue;
+}
+
+/*#setting for the content*/
+#content {
+    padding: 0 20px 20px 0;
+}
+.right {
+float: right;
+width: 600px;
+text-align: justify;
+padding-top: 5px;
+}
+
+.left {
+float: left;
+width: 220px;
+padding-top: 10px;
+    background-color: antiquewhite rgba (8, 20, 80, 1);
+}
+
+.left ul {
+    padding: 10px 0 15px 30px;
+    list-style-type: armenian;
+    color: burlywood;
+}
+
 
 /*CONTENT SECTION*/
-a.title{
-	color:#f0f0f0; 
-	font-weight:bold; 
-	text-decoration:none; 
-	font-size:30px; 
-	line-height:60px; 
-	padding-top:60px;
-}
+
 p{
 	padding:.5em 1em;
 	font-size:20px;
 	text-align:justify;
 }
-
-
-a:hover {
-	text-decoration: line-through;
-	color: #4F5D7F;
-       }
 
 #wrap {
 	margin: 20px auto 10px auto;
@@ -71,92 +113,14 @@ a:hover {
 	padding: 10px;
 }
 
-#header {
-    width: 100%
-	height: 160px;
-    background-color: coral
-}
 
 #header h1 { 
 font-family: sans-serif;
 font-size: 50px;
 letter-spacing: 10px;
 padding: 20px 0 0 10px;
-color: #FF5500;
+color: cadetblue;
 }
 
-#header h1 a:hover {
-color: #fff;
-}
 
-#menu {
-height: 30px;
-line-height: 30px;
-background: #245;
-}
-#menu ul {
-list-style-type: none;
-padding-left: 30px;
-}
-#menu ul li {
-display: block;
-float: left;
-}
-#menu ul li a {
-padding: 0 20px 0 0;
-text-decoration: none;
-font-weight: 600;
-font-size: 16px;
-color: #fff;
-}
-
-#content {
-padding: 0 20px 20px 0;
-}
-
-.right {
-float: right;
-width: 600px;
-text-align: justify;
-padding-top: 5px;
-}
-.right h2 {
-font-size: 18px;
-font-weight: 100;
-padding: 15px 0 7px 0;
-}
-
-.left {
-float: left;
-width: 160px;
-padding-top: 10px;
-}
-.left h2 {
-margin: 10px 0 0 0;
-padding-left: 10px;
-height: 24px;
-line-height: 24px;
-color: #7988AF;
-font-size: 15px;
-}
-.left ul {
-padding: 10px 0 15px 30px;
-list-style-type: square;
-color: #CC6666;
-}
-.left ul li a {
-text-decoration: none;
-font-weight: 600;
-}
-.left ul li a:hover {
-
-}
-
-#footer {
-text-align: center;
-font-size: 12px;
-color: #FF6633;
-}
-#footer a { color: #FF6666; }
-#footer a:hover { color: #111; }
 </html>
