--- a/css & html/2.css
+++ b/css & html/2.css
@@ -123,4 +123,39 @@ color: cadetblue;
 }
 
 
+#menu {
+height: 30px;
+line-height: 30px;
+background: #245;
+}
+#menu ul {
+list-style-type: none;
+padding-left: 30px;
+}
+#menu ul li {
+display: block;
+float: left;
+}
+#menu ul li a {
+padding: 0 20px 0 0;
+text-decoration: none;
+font-weight: 600;
+font-size: 16px;
+color: #fff;
+}
+
+
+/*setting for the footer*/
+#footer {
+    width: 100%;
+    height: 20px;
+    margin-top: 5px;
+    padding-top: 10px;
+    background-color: orangered;
+    opacity: 1.9;
+    text-align: center;
+    font-size: 18px;
+    color: black;
+}
+
 </html>
