--- a/css & html/2.css
+++ b/css & html/2.css
@@ -34,11 +34,19 @@ body {
 
 /*setting for header*/
 #header{
-	width:100%;
-    height: 70px;
-	background-color: coral;
-    opacity: 0.9;
+	padding: 10px;
     position: relative;
+}
+/*header judul*/
+#title{
+    width: 100%;
+    height: 100px;
+    position: relative;
+    font: 60px arial;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    background-color: cadetblue;
 }
 
 
@@ -68,11 +76,6 @@ body {
     text-decoration: underline;   
 }
 
-
-#menu ul li:hover a{
-    color: beige;
-    background-color: cadetblue;
-}
 
 /*#setting for the content*/
 #content {
@@ -112,16 +115,6 @@ p{
 	width: 800px;
 	padding: 10px;
 }
-
-
-#header h1 { 
-font-family: sans-serif;
-font-size: 50px;
-letter-spacing: 10px;
-padding: 20px 0 0 10px;
-color: cadetblue;
-}
-
 
 #menu {
 height: 30px;
