--- a/css & html/3.css
+++ b/css & html/3.css
@@ -41,7 +41,7 @@ background: #554d42 url("images/header.jpg")no-repeat;
 #header {
     width: 100%;
 	height: 300px;
-background-image: lightblue url("eu_aladdin-movie_hero-v2_r_29ab6c1a.jpg");
+background-image: url("eu_aladdin-movie_hero-v2_r_29ab6c1a.jpg");
 }
 /*
 #header h1 { 
