--- a/css & html/4.css
+++ b/css & html/4.css
@@ -30,3 +30,35 @@ a:hover {
 	padding: 10px;
 	/*I DELETED BORDER */
 }
+/*setting for runningtext*/
+
+#runningtext{
+    width: 100%;
+    height: 30px;
+    margin-top: 7px;
+    background-color: black;
+    color: red;
+    font-size: 20pt;
+    text-align: center;
+    position: relative;
+    clear: both;
+}
+#header {
+	height: 300px;
+background: #554d42 url(whatever.jpg);
+}
+#header h1 { 
+font-size: 50px;
+letter-spacing: -7px;
+padding: 17px 0 0 10px;
+color: #FF5500;
+}
+#header h1 a { 
+color: #D1DDEF;
+text-decoration: none;
+font-weight: 600;
+letter-spacing: -7px;
+}
+#header h1 a:hover {
+color: #fff;
+}
