--- a/css & html/4.css
+++ b/css & html/4.css
@@ -62,3 +62,12 @@ letter-spacing: -7px;
 #header h1 a:hover {
 color: #fff;
 }
+#menu {
+height: 30px;
+line-height: 30px;
+background: #000;
+}
+#menu ul {
+list-style-type: none;
+padding-left: 30px;
+}
