--- a/css & html/4.css
+++ b/css & html/4.css
@@ -71,3 +71,15 @@ background: #000;
 list-style-type: none;
 padding-left: 30px;
 }
+#menu ul li {
+display: block;
+float: left;
+}
+#menu ul li a {
+padding: 0 20px 0 0;
+text-decoration: none;
+font-weight: 600;
+font-size: 12px;
+color: #fff;
+}
+#menu ul li a:hover {
