--- a/css & html/4.css
+++ b/css & html/4.css
@@ -103,3 +103,43 @@ font-weight: 100;
 padding: 15px 0 7px 0;
 }
 .right h2 a {
+	text-decoration: none;
+}
+.right h2 a:hover {
+
+}
+
+.left {
+float: left;
+width: 160px;
+padding-top: 10px;
+}
+.left h2 {
+margin: 10px 0 0 0;
+padding-left: 10px;
+height: 24px;
+line-height: 24px;
+color: #7988AF;
+font-size: 15px;
+}
+.left ul {
+padding: 10px 0 15px 30px;
+list-style-type: square;
+color: #99AECD;
+}
+.left ul li a {
+text-decoration: none;
+font-weight: 600;
+}
+.left ul li a:hover {
+
+}
+
+#footer {
+text-align: center;
+font-size: 11px;
+color: #aaa;
+}
+#footer a { color: #aaa; }
+#footer a:hover { color: #111; }
+</html>
