--- a/css & html/3.css
+++ b/css & html/3.css
@@ -1,158 +1,315 @@
 /* <!DOCTYPE>
+
 <html>
+
     * {
+
 	margin: 0;
+
 	padding: 0;
+
   } */
 
+
+
 body {
+
 	background-color: darkorange; /* i changed the color */
+
     background-image: url("thumb-1920-176165.jpg"); /*i changed the background*/
+
 	font-family: arial, serif; /* i changed the font */
+
 	font-size: 12px;
+
 	line-height: 20px;
+
 	color: #222;
+
      }
 
+
+
 a {
+
  	text-decoration: none;
+
 	color: orange; /* I CHANGED THE COLOR */
+
   }
 
+
+
 a:hover {
+
 	text-decoration: underline;
+
 	color: orangered; /* i changed the color */
+
        }
 
+
+
 #wrap {
+
     /* margin: 20px auto 10px auto */
+
 	margin: auto; /* i changed the margin */
+
 	width: 800px;
+
 	background: rgba(5, 20, 50, 0.7) ;/* I CHANGED the Background */
+
 	padding: 10px;
+
 	 /* border: 5px solid #000; I deleted border */
+
 }
+
 /* 
-#header {
-	height: 160px;
-background: #554d42 url("images/header.jpg")no-repeat;
-} */
 
 #header {
-    width: 100%;
-	height: 300px;
-background-image: url("eu_aladdin-movie_hero-v2_r_29ab6c1a.jpg");
-}
-/*
-#header h1 { 
-font-size: 50px;
-letter-spacing: -7px;
-padding: 17px 0 0 10px;
-color: blueviolet;
-}
-#header h1 a { 
-color: #D1DDEF;
-text-decoration: none;
-font-weight: 600;
-letter-spacing: -7px;
-}
-#header h1 a:hover {
-color: deeppink;
+
+	height: 160px;
+
+background: #554d42 url("images/header.jpg")no-repeat;
+
 } */
+
+
+
+#header {
+
+    width: 100%;
+
+	height: 250px;
+
+background-image: url("hiha.jpg");
+
+}
+
+/*
+
+#header h1 { 
+
+font-size: 50px;
+
+letter-spacing: -7px;
+
+padding: 17px 0 0 10px;
+
+color: blueviolet;
+
+}
+
+#header h1 a { 
+
+color: #D1DDEF;
+
+text-decoration: none;
+
+font-weight: 600;
+
+letter-spacing: -7px;
+
+}
+
+#header h1 a:hover {
+
+color: deeppink;
+
+} */
+
+
 
 #menu {
+
 height: 30px;
+
 line-height: 30px;
+
 background: hotpink; /* i changed the color */
+
 }
+
 #menu ul {
+
 list-style-type: none;
+
 padding-left: 30px;
+
 }
+
 #menu ul li {
+
 display: block;
+
 float: left;
+
 }
+
 #menu ul li a {
+
 padding: 0 20px 0 0;
+
 text-decoration: none;
+
 font-weight: 600;
+
 font-size: 12px;
+
 color: #fff;
+
 }
+
 #menu ul li a:hover {
+
 color: #aaa;
+
 text-decoration: none;
+
 }
+
+
 
 #content {
+
 padding: 0 20px 20px 0;
+
 }
+
 /*
+
+
 
 .right {
+
 float: right;
+
 width: 600px;
+
 text-align: justify;
+
 padding-top: 5px;
+
 }
+
 .right h2 {
+
 font-size: 18px;
+
 font-weight: 100;
+
 padding: 15px 0 7px 0;
+
 }
+
 .right h2 a {
+
 text-decoration: none;
+
 }
+
 .right h2 a:hover {
+
 } */
 
+
+
 .left {
+
 float: left;
+
 width: 800px; /* i changed the size */
+
 padding-top: 10px;
+
 }
+
 /*
+
 .left h2 {
+
 margin: 10px 0 0 0;
+
 padding-left: 10px;
+
 height: 24px;
+
 line-height: 24px;
+
 color: #7988AF;
+
 font-size: 15px;
+
 }
+
 .left ul {
+
 padding: 10px 0 15px 30px;
+
 list-style-type: square;
+
 color: #99AECD;
+
 }
+
 .left ul li a {
+
 text-decoration: none;
+
 font-weight: 600;
+
 }
+
 .left ul li a:hover {
 
+
+
 }
 
+
+
 #footer {
+
 text-align: center;
+
 font-size: 11px;
+
 color: #aaa;
+
 }
+
 #footer a {color: #aaa; }
+
 #footer a:hover {color: #111; }
+
 */
+
 #footer{
+
 	width: 100%;
+
 	height: 50px;
+
 	margin-top: 5px;
+
 	padding-top: 10px;
-	background-color: deeppink; /* i changed the color*/
+
+	background-color: pink; /* i changed the color*/
+
 	opacity: 0.7; 
-    color: lightpink;
+
+    color: hotpink;
+
 	font-size: 16pt;
+
 	text-align: center;
+
 	position: relative;
+
 	clear: both;
+
 }
+
 /* </html> */
