--- a/css & html/2.css
+++ b/css & html/2.css
@@ -1,22 +1,42 @@
-/*setting for body*/
-/*#body*/
+/*
+<!DOCTYPE>
+<html>
+    * {
+margin: 0;
+padding: 0;
+  } */
 
+/* setting for body */
 body {
-	/*background color: white, i changed the background*/ 
-    background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg"); 
-	font-family: Tahoma, Helvetical;
-	font-size: 12px;
-	line-height: 20px;
+/*background color: white, i changed the background*/
+    background-image: url("Orange%20Peachy%20Keen%20Wallpaper.jpg");
+/*font-family: Tahoma, Arial, Helvetica, sans-serif;*/
+    font-family: Tahoma, Helvetical;
+font-size: 12px;
+line-height: 20px;
+    /*color: #222;*/
      }
+/*
+a {
+  text-decoration: none;
+color: #99AECD;
+  }
 
+a:hover {
+text-decoration: underline;
+color: #4F5D7F;
+       }
+*/
 
+/* i add this to adjust the running text*/
 #runningtext{
     width: 100%;
     height: 40px;
     margin-top: 5px;
     padding-top: 10px;
-    color: cornflowerblue;
-    font-size: 25pt;
+    background-color: orange;
+    color:white;
+    font-size: 20pt;
     text-align: center;
     position: relative;
     clear: both;
@@ -24,22 +44,19 @@ body {
 
 
 /*setting for main layout*/
-#layout{
-    /*background: #fff; */ background: rgba(5,20,50.0,7);
-    width: 850px
-    margin: auto;
-    text-align: left;
-    padding: 2px;
+#wrap{
+    /* margin: 20px auto 10px auto */
+margin: auto; /* i changed the margin */
+width: 800px;
+background: rgba(255, 255, 255, 0.3); /* background: #fff; i changed the background */
+padding: 10px; /* padding: 2px; i changed the padding*/
+    /* border: 5px solid #000; i deleted the border */
 }
 
-
-/*setting for header*/
-#header{
-	padding: 10px;
-    position: relative;
-}
-/*header judul*/
-#title{
+/* setting for header */
+#header {
+    /* height: 160px;
+    background: #554d42 url(images/header.jpg) no-repeat; */
     width: 100%;
     height: 100px;
     position: relative;
@@ -47,80 +64,32 @@ body {
     color: white;
     font-weight: bold;
     text-align: center;
-    background-color: cadetblue;
+    background-color: orange;
 }
 
+/*
+#header h1 {
+font-size: 50px;
+letter-spacing: -7px;
+padding: 17px 0 0 10px;
+color: #FF5500;
+}
+#header h1 a {
+color: #D1DDEF;
+text-decoration: none;
+font-weight: 600;
+letter-spacing: -7px;
+}
+#header h1 a:hover {
+color: #fff;
+}
+*/
 
 /*setting for menu*/
-#menu{
-    width: 100%;
-    height: 40px;
-    background-color: darkkhaki;
-    opacity: 0.9;
-    position: relative;
-}
-
-#menu ul{
-    margin: 0;
-    padding: 0;
-    list-style: armenian;
-}
-
-#menu ul li{
-    float: left;
-}
-
-#menu li a{
-    float: left;
-    color: white;
-    padding: 12px 20px;
-    text-decoration: underline;   
-}
-
-
-/*#setting for the content*/
-#content {
-    padding: 0 20px 20px 0;
-}
-.right {
-float: right;
-width: 600px;
-text-align: justify;
-padding-top: 5px;
-}
-
-.left {
-float: left;
-width: 220px;
-padding-top: 10px;
-    background-color: antiquewhite rgba (8, 20, 80, 1);
-}
-
-.left ul {
-    padding: 10px 0 15px 30px;
-    list-style-type: armenian;
-    color: burlywood;
-}
-
-
-/*CONTENT SECTION*/
-
-p{
-	padding:.5em 1em;
-	font-size:20px;
-	text-align:justify;
-}
-
-#wrap {
-	margin: 20px auto 10px auto;
-	width: 800px;
-	padding: 10px;
-}
-
 #menu {
 height: 30px;
 line-height: 30px;
-background: #245;
+background-color: darkorange; /*i changed the color*/
 }
 #menu ul {
 list-style-type: none;
@@ -134,22 +103,100 @@ float: left;
 padding: 0 20px 0 0;
 text-decoration: none;
 font-weight: 600;
-font-size: 16px;
+font-size: 12px;
 color: #fff;
+}
+#menu ul li a:hover {
+color: #aaa;
+text-decoration: none;
+}
+
+
+/*#setting for the content*/
+#content {
+    padding: 0 20px 20px 0;
+}
+/*
+.right {
+float: right;
+width: 600px;
+text-align: justify;
+padding-top: 5px;
+}
+.right h2 {
+font-size: 18px;
+font-weight: 100;
+padding: 15px 0 7px 0;
+}
+.right h2 a {
+text-decoration: none;
+}
+.right h2 a:hover {
+
+}
+*/
+
+.left {
+/*float: left;
+width: 160px;
+padding-top: 10px;*/
+float: left;
+width:800px;
+padding-top: 10px;
+}
+
+/*
+.left h2 {
+margin: 10px 0 0 0;
+padding-left: 10px;
+height: 24px;
+line-height: 24px;
+color: #7988AF;
+font-size: 15px;
+}
+.left ul {
+padding: 10px 0 15px 30px;
+list-style-type: square;
+color: #99AECD;
+}
+.left ul li a {
+text-decoration: none;
+font-weight: 600;
+}
+.left ul li a:hover {
+
+}
+*/
+
+.left ul {
+    padding: 10px 0 15px 30px;
+    list-style-type: armenian;
+    color: burlywood;
 }
 
 
 /*setting for the footer*/
 #footer {
     width: 100%;
-    height: 20px;
-    margin-top: 5px;
-    padding-top: 10px;
-    background-color: orangered;
-    opacity: 1.9;
-    text-align: center;
-    font-size: 18px;
-    color: black;
+height: 50px;
+margin-top: 5px;
+padding-top: 10px;
+background-color: orange; /* i changed the color*/
+opacity: 0.7; /*i add effect to the background*/
+    color: white;
+font-size: 16pt;
+text-align: center;
+position: relative;
+clear: both;
 }
 
+/*
+#footer {
+text-align: center;
+font-size: 11px;
+color: #aaa;
+}
+#footer a { color: #aaa; }
+#footer a:hover { color: #111; }
 </html>
+*/
