--- a/css & html/4.css
+++ b/css & html/4.css
@@ -1,53 +1,59 @@
-<!DOCTYPE>
+/*<!DOCTYPE>
 <html>
     * {
 	margin: 0;
 	padding: 0;
   }
-
+*/
+/* setting for body */
 body {
+    background-color: white; /* changed color */
     background-image: url(fika1.jpg);/*i change the background*/
-	font-family:"algerian" Serif;
+	font-family:"times new roman" , Serif;
 	font-size: 12px;
 	line-height: 20px;
-	color: yellow;
+	color: black; /* changed color */
      }
 
 a {
- 	text-decoration: line-through;
-	color: orchid; /* I CHANGE THE COLOR*/
+ 	text-decoration: none;
+	color: orchid; /* I CHANGED THE COLOR*/
   }
 
 a:hover {
 	text-decoration: underline;
-	color: #FFA500; /*change */
+	color: #FFA500; /*changed color */
        }
 
+/* setting for layout */
 #wrap {
-	margin: 80px auto 60px auto;
+	margin:auto;
+    /* margin: 80px auto 60px auto; */
 	width: 800px;
-	background: dodgerblue ;/* I CHANGE THE COLOR */
+	background: rgba(255,255,255,0.7);/* I CHANGE THE COLOR */
 	padding: 10px;
-	/*I DELETED BORDER */
+	/* border: 5px solid #000; I DELETED BORDER */
 }
 
-/*setting for runningtext*/
+/*i add setting for runningtext*/
 
 #runningtext{
     width: 100%;
     height: 30px;
     margin-top: 7px;
     background-color: black;
-    color: red;
+    opacity: 0.7;
+    color: white;
     font-size: 20pt;
     text-align: center;
     position: relative;
     clear: both;
 }
 #header {
-	height: 300px;
-background: #554d42 url(whatever.jpg);
+height: 250px; /* changed size */
+background: #554d42 url(sayangaladdin.jpeg);
 }
+/*
 #header h1 { 
 font-size: 50px;
 letter-spacing: -7px;
@@ -63,11 +69,12 @@ letter-spacing: -7px;
 #header h1 a:hover {
 color: #fff;
 }
-
+*/
 #menu {
 height: 30px;
 line-height: 30px;
 background: #000;
+opacity: 0.7;
 }
 #menu ul {
 list-style-type: none;
@@ -92,7 +99,7 @@ text-decoration: none;
 #content {
 padding: 0 20px 20px 0;
 }
-
+/*
 .right {
 float: right;
 width: 600px;
@@ -109,13 +116,14 @@ text-decoration: none;
 }
 .right h2 a:hover {
 
-}
+}*/
 
 .left {
 float: left;
-width: 160px;
+width: 800px;
 padding-top: 10px;
 }
+/*
 .left h2 {
 margin: 10px 0 0 0;
 padding-left: 10px;
@@ -135,8 +143,8 @@ font-weight: 600;
 }
 .left ul li a:hover {
 
-}
-
+}*/
+/*
 #footer {
 text-align: center;
 font-size: 11px;
@@ -145,3 +153,17 @@ color: #aaa;
 #footer a { color: #aaa; }
 #footer a:hover { color: #111; }
 </html>
+*/
+#footer{
+    width: 100%;
+    height: 50px;
+    margin-top: 5px;
+    padding-top: 10px;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+    font-size: 16pt;
+    text-align: center;
+    position: relative;
+    clear:both;
+}
