--- a/css & html/3.css
+++ b/css & html/3.css
@@ -27,6 +27,20 @@ body {
 	color: #222;
 
      }
+/* i add this to adjust the running text*/
+#runningtext{
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 10px;
+    background-color: lightpink;
+    color:white;
+    font-size: 20pt;
+    text-align: center;
+    position: relative;
+    clear: both;
+}
+
 
 
 
